2003-07-12  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * sdcc.dsw, all.dsp, link/z80/linkgbz80.dsp, as/z80/as-gbz80.dsp:
    added gbz80 build to MSVC project.
    * src/SDCCmain.c, src/SDCCglue.c, src/z80/main.c, src/z80/z80.dsp,
    link/z80/aslink.h, linkz80.dsp: cleaned up z80 and gbz80 asm files
    from 8051 stuff and setup so it links using a .lnk file.

2003-07-06  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * support/librarian/sdcclib.c: sdcc librarian.
    * as/mcs51/aslink.h, as/mcs51/lklib.c: Support for libraries created
    with sdcclib.

2003-07-03  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * as/mcs51/lkmain.c: properly handle extensions in function afile.

2003-07-02  Borut Razem <borut.razem@siol.net>

	* src/port.h, src/SDCCmain.c, src/pic/glue.h, src/pic/main.c,
	src/pic16/glue.h, sdcc/src/pic16/main.c, src/izt/i186.c,
	src/izt/tlcs900h.c, src/avr/main.c, src/ds390/main.c, src/mcs51/main.c,
	src/xa51/main.c, src/z80/main.c:
	virtualization of glue() function: each port has it's own glue function,
	which is accessed by do_glue function pointer in PORT.general structure

2003-07-01 Kevin Vigor <kevin@vigor.nu>

        * DS800C400 fun, improved ROM interface and tinibios.

2003-06-27 Kevin Vigor <kevin@vigor.nu>

	* More support for DS80C400. Now includes beginning of interface to ROM.

2003-06-25  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/gen.c (gencjneshort): fixed bug #760345

2003-06-20  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/lkaomf51.c: Make sure the size of the last procedure is correct.

2003-06-19  Borut Razem <borut.razem@siol.net>

	* src/z80/main.c: fixed Z80 port again: missing -k library paths in linker command line

2003-06-19  Borut Razem <borut.razem@siol.net>

	* src/SDCCutil.h, src/SDCCutil.c, src/SDCCglobl.h, src/SDCCmain.c, src/z80/main.c:
	fixed Z80 port - crt0.o: cannot open.

2003-06-19  Bernhard Held <bernhard@bernhardheld.de>

	* support/Util/MySystem.c (merge_command): revert bad fix
